--- a/GenericHID/generichid/GenericHID.vcproj
+++ b/GenericHID/generichid/GenericHID.vcproj
@@ -376,6 +376,10 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath="..\include\common.h"
+				>
+			</File>
+			<File
 				RelativePath=".\dragtoolbutton.h"
 				>
 				<FileConfiguration
