--- a/GenericHID/clprogram/CLProgram.vcproj
+++ b/GenericHID/clprogram/CLProgram.vcproj
@@ -58,7 +58,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies=" qtmain.lib QtCore4.lib"
+				AdditionalDependencies="qtmain.lib QtCore4.lib ..\libusb-win32-device-bin-0.1.12.2\lib\msvc\libusb.lib"
 				OutputFile="$(OutDir)\$(ProjectName).exe"
 				AdditionalLibraryDirectories="$(QTDIR)\lib"
 				GenerateDebugInformation="false"
