--- a/GenericHID/programmer/Programmer.vcproj
+++ b/GenericHID/programmer/Programmer.vcproj
@@ -157,6 +157,14 @@
 				RelativePath=".\stdafx.cpp"
 				>
 				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="1"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
 					Name="Debug|Win32"
 					>
 					<Tool
